picture fix and home page alignments

--- a/src/static/css/base/_typography.scss
+++ b/src/static/css/base/_typography.scss
@@ -93,6 +93,10 @@
 			border-bottom: 0;
 		}
 	}
+	.mainName{
+		margin-bottom: .75em !important;
+		margin-top: -.4em !important;
+	}
 
 	#light h1{
 		color: _palette(fg-bold);
